--- a/assets/css/quanlydaotao-new.css
+++ b/assets/css/quanlydaotao-new.css
@@ -1,11 +1,13 @@
-.tieude_noidung{max-width:100%; max-height:auto; display:flex; background:green}
+.tieude-noidung{max-width:100%; max-height:auto; display:flex}
 .tieude-item1, .tieude-item3{flex-basis:20%}
-.tieude-item1 img, .tieude-item3 img{width:95%; height:95%}
+.tieude-item1 img, .tieude-item3 img{max-width:95%; max-height:95%}
 .tieude-item2{flex-basis:60%}
 .tieude-item2 h5{text-align:center; margin-top:25px; font-family:Roboto Condensed; 
 	font-size:22px; color:#006838; border-right:2px solid gray; border-left:2px solid gray}
-.noidung{max-width:100%; max-height:200px; display:flex; background:blue}
 
+.block-nd{background:#00aa8c; max-width:100%; max-height:auto; display:flex; margin-top:30px}
+.item-nd{width:100%; height:auto}
 
-
-#00aa8c
+.item-num h4{width:100%; height:55px; color:#006838; text-align:center; background:white}
+.item-icon img{width:100%; height:100%; margin:-46px auto 0px auto}
+.item-text{border-right:2px solid gray}
