--- a/assets/css/quanlydaotao-new.css
+++ b/assets/css/quanlydaotao-new.css
@@ -9,7 +9,7 @@
 .item-nd{width:100%; height:auto; background:#00aa8c}
 .item-num h4{width:100%; height:50px; font-size:20px; color:#006838; text-align:center; background:white; cursor:default}
 .item-icon img{width:70%; height:70%; margin:-36px 0 0 25px; cursor:pointer}
-.item-text{border-right:2px solid gray; width:100%; height:90px; margin:10px 0 0 0px}
+.item-text{border-right:2px solid white; width:100%; height:90px; margin:10px 0 0 0px}
 .text1{border:none}
 .item-text h5{font-family:segoe ui; font-size:14px; text-align:center; cursor:default}
 /*Responsiv Mobile*/
