--- a/assets/css/quanlydaotao-new.css
+++ b/assets/css/quanlydaotao-new.css
@@ -11,7 +11,8 @@
 .item-icon img{width:70%; height:70%; margin:-36px 0 0 25px; cursor:pointer}
 .item-text{border-right:2px solid white; width:100%; height:90px; margin:10px 0 0 0px}
 .text1{border:none}
-.item-text h5{font-family:segoe ui; font-size:14px; text-align:center; cursor:default}
+.item-text h5{font-family:segoe ui; font-size:14px; text-align:center; cursor:default; color:white;
+	font-weight:lighter; margin-left:5px; margin-right:5px}
 /*Responsiv Mobile*/
 @media screen and (min-width:600px){
 	.tieude-noidung:before, .block-nd:before, .tieude-noidung:after, .block-nd:after{display:table; clear:both}
