--- a/assets/css/quanlydaotao-new.css
+++ b/assets/css/quanlydaotao-new.css
@@ -1,10 +1,10 @@
 .tieude-noidung{max-width:100%; max-height:auto; display:flex}
-.tieude-item1, .tieude-item3{flex-basis:20%}
-.tieude-item1 img, .tieude-item3 img{max-width:95%; max-height:95%}
-.tieude-item2{flex-basis:60%}
-.tieude-item2 h5{text-align:center; margin-top:25px; font-family:Roboto Condensed; 
-	font-size:22px; color:#006838; border-right:2px solid gray; border-left:2px solid gray}
-
+.tieude-item2{flex-basis:20%; margin-left:180px}
+.tieude-item2 img{max-width:95%; max-height:95%}
+.tieude-item1{flex-basis:60%}
+.tieude-item1 h5{text-align:center; margin-top:25px; font-family:Roboto Condensed; 
+	font-size:22px; color:#006838; border-right:2px solid gray}
+/*==================================================*/
 .block-nd{max-width:100%; max-height:auto; display:flex; margin-top:30px}
 .item-nd{width:100%; height:auto; background:#00aa8c}
 .item-num h4{width:100%; height:50px; font-size:20px; color:#006838; text-align:center; background:white; cursor:default}
@@ -17,8 +17,8 @@
 @media screen and (min-width:600px){
 	.tieude-noidung:before, .block-nd:before, .tieude-noidung:after, .block-nd:after{display:table; clear:both}
 	.tieude-noidung, .block-nd{max-width:100%}
-	.tieude-item2 h5{font-size:12px}
-	.tieude-item1 img, .tieude-item3 img{margin-top:15px}
+	.tieude-item1 h5{font-size:12px}
+	.tieude-item2 img{margin-top:15px}
 	.item-num h4{font-size:14px; height:40px}
 	.item-icon img{width:70%; height:70%; margin:-36px 0 0 14px}
 	.item-text h5{font-size:10px}
@@ -26,9 +26,8 @@
 /*Responsiv Desktop*/
 @media screen and (min-width:1024px){
 	.tieude-noidung:before, .block-nd:before, .tieude-noidung:after, .block-nd:after{display:table; clear:both}
-	.tieude-item2 h5{font-size:22px}
-
-	.tieude-item1 img, .tieude-item3 img{margin-top:0px}
+	.tieude-item1 h5{font-size:22px}
+	.tieude-item2 img{margin-top:0px}
 	.item-num h4{font-size:20px; height:50px}
 	.item-icon img{width:70%; height:70%; margin:-36px 0 0 25px}
 	.item-text h5{font-size:14px}
