--- a/assets/css/quanlydaotao-new.css
+++ b/assets/css/quanlydaotao-new.css
@@ -1,7 +1,7 @@
 .tieude-logo{max-width:100%; max-height:auto; display:flex; margin-bottom:15px}
 .tieude-noidung{max-width:100%; max-height:auto; display:flex;margin-bottom:50px}
-.tieude-noidung h5{font-family:Roboto Condensed; font-size:22px; color:#006838; display:block; margin:0px auto 0px auto}
-.tieude-logo img{max-width:15%; max-height:15%; display:block; margin:0px auto 0px auto}
+.tieude-noidung h5{font-family:arial; font-size:22px; color:#006838; display:block; margin:0px auto}
+.tieude-logo img{max-width:15%; max-height:15%; display:block; margin:0px auto}
 /*====================================================================================================*/
 .block-nd{max-width:100%; max-height:auto; display:flex; margin-top:30px}
 .item-nd{width:100%; height:auto; background:#00aa8c}
